<resources>
    <string name="app_name">DavidoffDime</string>
    <string name="action_settings">Settings</string>
    <string name="api_key" translatable="false">90c598884bb2e55f8e9303a6c1f90435</string>
    <string name="web_service_url" translatable="false">http://api.openweathermap.org/data/2.5/forecast?q=</string>
    <string name="web_service_url_image" translatable="false">"http://openweathermap.org/img/w/</string>

    <string name="invalid_url">Invalid URL</string>
    <string name="weather_condition_image">A graphical representation of the weather conditions</string>

    <string name="high_temp">High: %s</string>
    <string name="low_temp">Low: %s</string>
    <string name="day_description">%1$s: %2$s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="hint_text">Enter city (e.g, Minsk or минск)</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org</string>

    <string name="start_button0">Go to Chat App</string>
    <string name="start_button1">Go to Weather App</string>
    <string name="start_button2">Information</string>
    <string name="start_text">Weather in Belarus</string>
    <string name="start_text2">DavidoffDime</string>
    <string name="start_text_wifi">Find the weather in the city</string>

    <string name="base_text1">
        To obtain meteorological data for the cities of Belarus, the OpenWeatherMap web service is used
        (the free version provides data every 3 hours). </string>

    <string name="base_text2">
       The application is configured only for searching in the cities of Belarus (in any
        register and language, for example, in Minsk or Minsk).</string>

    <string name="base_text3">
        To use the application, be sure to turn on the Internet
        or use the Wi-Fi turn-on service below. </string>

    <string name="base_text5">
        Идея приложения: Мобильный информационно-сервисный ресурс "DavidoffDime» для жителей Беларуси
        аналогичный сервисам Яндекс, реализованный под android. Захват 100% интересов пользователей в сети и их предпочтений.</string>
    <string name="base_text6">
        Цель продукта: универсальный информационно-сервисный ресурс, который является единой точка доступа к спектру
        приложений различного назначения для жителей РБ. </string>
    <string name="base_text7">

Функция:

1.	Информационно-сервисная:
•	Информация о погоде по городам Беларуси.
•	Новости.
•	Всевозможные виджеты (будильник, календарь и т.д.)
2.	Развлекательная:
•	Игры.
•	Мультимедийные ресурсы.



3.	Коммуникационная:
•	Мессенджер для общения.
•	Почта


 </string>

</resources>
